# infinity-matrix

./: .dockerignore  .env.example  .eslintrc.js  .gitignore  .pre-commit-config.yaml  AI_PROPHET_BRANDING_UPDATE.md  AI_PROPHET_INTEGRATION.md  ARCHITECTURE.md  CHANGELOG.md  COLLABORATION.md  CONFIGURATION.md  CONTRIBUTING.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  EXAMPLES.md  IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.txt  IMPLEMENTATION_SUMMARY_MONACO_IDE.md  LAUNCH_SUMMARY.md  LICENSE  MONACO_IDE_DOCUMENTATION.md  MONACO_IDE_QUICKSTART.md  Makefile  OPERATIONAL_SUMMARY.md  OPERATOR_GUIDE.md  OPERATOR_RUNBOOK.md  PROJECT_STATUS.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  QUICKREF.md  QUICKSTART.md  README.md  ROADMAP.md  SECURITY.md  SECURITY_SUMMARY.md  SECURITY_SUMMARY_MONACO_IDE.md  SETUP.md  STATUS.md  SUMMARY.md  (+34 more)
.github/: copilot-instructions.md
.github/workflows/: agent-tasks.yml  audit-logger.yml  auto-bootstrap.yml  auto-fix.yml  auto-merge.yml  auto-pull.yml  auto-resolve.yml  autonomous-agent.yml  autonomous-pipeline.yml  cd.yml  ci-cd.yml  ci.yml  code-sync.yml  cortex_bootstrap.yml  dashboard-updater.yml  deploy.yml  docs.yml  health-monitor.yml  infinity_matrix_bootstrap.yml  init-labels.yml  matrix-deploy.yml  pr-automation.yml  project-board-sync.yml  security.yml  self-healing.yml  sop-generator.yml  system-health.yml  system-manifest.yml  testing.yml  tracking.yml  vision_cortex_genesis.yml
.prooftest/: DASHBOARD.md  PROJECT_STATUS.txt  README.md
.prooftest/artifacts/: pipeline_pipeline_20251231_025634.json  pipeline_pipeline_20251231_030006.json  pr_merge_20251231_025634.json  pr_merge_20251231_030006.json  pr_metadata_20251231_025634.json  pr_metadata_20251231_030006.json  pr_review_20251231_025634.json  pr_review_20251231_030006.json
.prooftest/demos/: health_check_demo.py
.prooftest/exports/: export_artifacts.py
.prooftest/logs/: KICKOFF_LOG.json  agent_health.json  events_20251231.jsonl  repairs.jsonl  workflows.json
.prooftest/reports/: agent_status_20251231_025634.csv  audit_report_20251231_025634.md  compliance_report_20251231_025634.json  compliance_report_20251231_025732.json  compliance_report_20251231_025835.json  compliance_report_20251231_025845.json  compliance_report_20251231_030122.json  system_state_20251231_025634.json
agents/: README.md  __init__.py  analytics_agent.py  base_agent.py  financial_agent.py  loan_agent.py  nlp_agent.py  real_estate_agent.py
ai_stack/: README.md  __init__.py
ai_stack/agents/: __init__.py  base_agent.py  ceo_agent.py  crawler_agent.py  documentor_agent.py  ingestion_agent.py  organizer_agent.py  predictor_agent.py  strategist_agent.py  validator_agent.py
ai_stack/vision_cortex/: __init__.py  config.py  logger.py  state_manager.py  vision_cortex.py
backend/: .env.example  Dockerfile  __init__.py  admin_api.py  admin_control_plane.py  agent_endpoints.py  app_autofix.py  ceo_intelligence.py  database.py  enrichment.py  fixes_async_db.py  fixes_security_config.py  main.py  manus_core.py  models.py  package-lock.json  package.json  production_schema.sql  pytest.ini  requirements-dev.txt  requirements.txt  schemas.py  simple_api.py  tsconfig.json  voice_agent.py  websocket_manager.py
backend/app/: main.py
backend/infinity_matrix/: __init__.py  main.py
backend/src/: index.ts
blueprints/: echo-ai-avatar.yaml  example-data-pipeline.yaml  example-microservice.yaml
cli/: infinity_matrix_cli.py
config/: config.example.yaml
cortex/: README.md  __init__.py  firestore_integration.py  pubsub_integration.py  vision_cortex.py
dashboard/: index.html  status.json
docker/: Dockerfile  Dockerfile.backend  Dockerfile.frontend
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  GITHUB_PAGES_SETUP.md  INFINITY_MATRIX_ENTERPRISE_BOOTSTRAP.md  INTEGRATED_TECHNOLOGIES.md  MANUS_SELF_MIRROR_REPORT.md  ONBOARDING.md  QUICK_START.md  REALIGNMENT_REPORT.md  RUNBOOK.md  SECURITY_GOVERNANCE.md  SETUP.md  WIKI_AND_DISCUSSIONS_SETUP.md  agent-contract.md  agents.md  ai-vision.md  api-reference.md  api.md  api_reference.md  architecture.md  blueprint.md  compliance.md  configuration.md  cost-optimization.md  deployment.md  getting-started.md  incident.md  index.md  integrations.md  prompt_suite.md  quickstart.md  roadmap.md  security.md  system_manifest.md  system_overview.md  templates.md
examples/: README.md  agents_example.py  basic_usage.py  complete_example.py  end_to_end_workflow.py  financial_analysis.py  real_estate_leads.py  sentiment_analysis.py  task_management_api.py  usage_examples.py  web_crawling.py
frontend/: .env.example  API_CONTRACT.md  API_REFERENCE.md  BUSINESS_PLAN.md  DEPLOYMENT_GUIDE.md  DEVELOPER_HANDOFF.md  Dockerfile  FEATURE_ROADMAP.md  FRONTEND_BACKEND_CONTRACT.md  INVESTOR_PACKET.md  PREFLIGHT_REPORT.md  README.md  SECURITY_AUDIT.md  SYSTEM_ARCHITECTURE.md  TECHNICAL_DOCUMENTATION.md  TESTING.md  USER_GUIDE.md  index.html  nginx.conf  package-lock.json  package.json
frontend.bak/: package-lock.json  package.json  vitest.config.ts
gateway/: __init__.py  omni_router.py
gateway_stack/: README.md  __init__.py
index_system/: README.md
infinity_library/: README.md
infinity_matrix/: __init__.py  cli.py  main.py
k8s/: deployment.yaml  ingress.yaml  secret.yaml  service.yaml
logs/: audit_2025-12-31.jsonl
magic_pack/: README.md
manifests/: agent-registry.yaml  system-manifest.yaml
monitoring/: prometheus.yml
policies/: README.md  deployment.yml  escalation.yml  rollback.yml
scripts/: autonomous_agent.py  deploy-gcp.sh  deploy-hostinger.sh  generate_manifest.sh  health-check.js  run_vision_cortex.py  setup.bat  setup.sh  start-dev.sh  sync_manifest_to_cloud.sh
src/: __init__.py  index.js  index.ts
tests/: __init__.py  conftest.py  test_agents.py  test_api.py  test_base_agent.py  test_basic.py  test_builder.py  test_config.py  test_connectors.py  test_core.py  test_crawlers.py  test_finance.py  test_gateway_security.py  test_models.py  test_real_estate.py  test_seed_manager.py  test_sentiment.py  test_vision_cortex.py
(+729 files in other folders)
