[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "infinity-matrix"
version = "1.0.0"
description = "Auto-Resolve and Auto-Merge System"
readme = "README.md"
authors = [{name = "Infinity X One Systems"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.7"

[project.scripts]
infinity-matrix = "cli:main"

[project.urls]
Homepage = "https://github.com/InfinityXOneSystems/infinity-matrix"
Repository = "https://github.com/InfinityXOneSystems/infinity-matrix"
